data/all_generated_tests/raw_wast_tests/br_if_IncorrectConditionEvaluation_1687.wast
;; 8. **Test Description:** Test using floating point value simulations by converting them to integer conditions for `br_if` evaluations, ensuring conversions correctly influence branching.    - **Specific Constraint:** Examine branching based on converted and interpreted stack values.    - **Relation to Incorrect Condition Evaluation:** Checks if condition evaluation handles type conversions accurately.

(assert_invalid
 (module
   (func $float-to-int-branch 
     (block
       (br_if 0
         (i32.trunc_f32_s (f32.const 1.5))
       )
     )
   )
 )
 "type mismatch"
)